--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="container">
     <div class="card">
-      <img src="/image-qr-code.png" alt="qr-code">
+      <img src="image-qr-code.png" alt="qr-code">
       <div class="text">
         <h2>Improve your front-end skills by building projects</h2>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
