--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://dbnvides.github.io/Card_QR-Code/style.css" rel="stylesheet" />
 
   <title>Frontend Mentor | QR code component</title>
 </head>
